Fixed header alignment.

--- a/META-INF/web/css/rigclient.css
+++ b/META-INF/web/css/rigclient.css
@@ -84,7 +84,7 @@ legend {
 #header {
 	color: #333;
 	padding: 4px;
-	height: 0px;
+	height: 2px;
 	position: relative;
 	overflow: hidden;
 }
